gedit_help_sources = [
  'gedit-change-color-scheme.page',
  'gedit-change-default-font.page',
  'gedit-close-file.page',
  'gedit-create-new-file.page',
  'gedit-edit-as-root.page',
  'gedit-files-basic.page',
  'gedit-full-screen.page',
  'gedit-open-files-from-sidepane.page',
  'gedit-open-files.page',
  'gedit-open-on-server.page',
  'gedit-open-recent.page',
  'gedit-plugin-guide.page',
  'gedit-plugins-change-case.page',
  'gedit-plugins-doc-stats.page',
  'gedit-plugins-external-tools.page',
  'gedit-plugins-file-browser.page',
  'gedit-plugins-insert-date-time.page',
  'gedit-plugins-install.page',
  'gedit-plugins-modelines.page',
  'gedit-plugins-pyconsole.page',
  'gedit-plugins-quick-open.page',
  'gedit-plugins-snippets.page',
  'gedit-plugins-sort.page',
  'gedit-printing-order.page',
  'gedit-printing.page',
  'gedit-printing-select.page',
  'gedit-quickstart.page',
  'gedit-replace.page',
  'gedit-save-file.page',
  'gedit-search.page',
  'gedit-shortcut-keys.page',
  'gedit-spellcheck.page',
  'gedit-syntax-highlighting.page',
  'gedit-tab-groups.page',
  'gedit-tabs-moving.page',
  'gedit-tabs.page',
  'gedit-undo-recent-action.page',
  'index.page',
  'legal.xml',
]

gedit_help_media = [
  'figures/gedit-html-snippet.png',
  'figures/gedit-icon.png',
  'figures/gedit3-screenshot.png',
]

gnome.yelp(
  meson.project_name(),
  sources: gedit_help_sources,
  media: gedit_help_media,
  symlink_media: true,
)
