bedit_help_sources = [
  'bedit-change-color-scheme.page',
  'bedit-change-default-font.page',
  'bedit-close-file.page',
  'bedit-create-new-file.page',
  'bedit-edit-as-root.page',
  'bedit-files-basic.page',
  'bedit-full-screen.page',
  'bedit-open-files-from-sidepane.page',
  'bedit-open-files.page',
  'bedit-open-on-server.page',
  'bedit-open-recent.page',
  'bedit-plugin-guide.page',
  'bedit-plugins-change-case.page',
  'bedit-plugins-doc-stats.page',
  'bedit-plugins-external-tools.page',
  'bedit-plugins-file-browser.page',
  'bedit-plugins-insert-date-time.page',
  'bedit-plugins-install.page',
  'bedit-plugins-modelines.page',
  'bedit-plugins-pyconsole.page',
  'bedit-plugins-quick-open.page',
  'bedit-plugins-snippets.page',
  'bedit-plugins-sort.page',
  'bedit-printing-order.page',
  'bedit-printing.page',
  'bedit-printing-select.page',
  'bedit-quickstart.page',
  'bedit-replace.page',
  'bedit-save-file.page',
  'bedit-search.page',
  'bedit-shortcut-keys.page',
  'bedit-spellcheck.page',
  'bedit-syntax-highlighting.page',
  'bedit-tab-groups.page',
  'bedit-tabs-moving.page',
  'bedit-tabs.page',
  'bedit-undo-recent-action.page',
  'index.page',
  'legal.xml',
]

bedit_help_media = [
  'figures/bedit-html-snippet.png',
  'figures/bedit-icon.png',
  'figures/bedit3-screenshot.png',
]

gnome.yelp(
  meson.project_name(),
  sources: bedit_help_sources,
  media: bedit_help_media,
  symlink_media: true,
)
