tests_progs_cppflags =		\
	-I$(top_srcdir)		\
	-I$(top_srcdir)/gedit

tests_progs_cflags = $(GEDIT_CFLAGS)
tests_progs_ldadd = $(top_builddir)/gedit/libgedit.la $(GEDIT_LIBS)

# Just an example, for a future unit test.
#noinst_PROGRAMS += tests/document-input-stream
#tests_document_input_stream_SOURCES = tests/document-input-stream.c
#tests_document_input_stream_LDADD = $(tests_progs_ldadd)
#tests_document_input_stream_CPPFLAGS = $(tests_progs_cppflags)
#tests_document_input_stream_CFLAGS = $(tests_progs_cflags)
