# Stuff to build the Windows installer:
EXTRA_DIST += \
	win32/make-gedit-installer \
	win32/make-gedit-installer.bat \
	win32/README \
	win32/qt-ifw/config/config.xml \
	win32/qt-ifw/packages/org.gnome.gedit.root/meta/installscript.js \
	win32/qt-ifw/packages/org.gnome.gedit.root/meta/package.xml \
	win32/qt-ifw/packages/org.gnome.gedit.root.package/meta/installscript.js \
	win32/qt-ifw/packages/org.gnome.gedit.root.package/meta/package.xml
