install_data(
  'org.gnome.gedit.svg',
  install_dir: join_paths(
    get_option('prefix'),
    get_option('datadir'),
    'icons/hicolor/scalable/apps'
  )
)

install_data(
  'org.gnome.gedit-symbolic.svg',
  install_dir: join_paths(
    get_option('prefix'),
    get_option('datadir'),
    'icons/hicolor/symbolic/apps'
  )
)
