install_data(
  'com.bwhmather.bedit.svg',
  install_dir: join_paths(
    get_option('prefix'),
    get_option('datadir'),
    'icons/hicolor/scalable/apps'
  )
)

install_data(
  'com.bwhmather.bedit-symbolic.svg',
  install_dir: join_paths(
    get_option('prefix'),
    get_option('datadir'),
    'icons/hicolor/symbolic/apps'
  )
)
